Add isLoggedIn to user
